--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Title Bar -->
 	<nav>
 		<div class="nav-wrapper red">
-			<a href="#" class="home_class brand-logo" style="padding-left:15px;">Ancient Chinese Mathematics</a>
+			<a href="#" class="home_class brand-logo" style="padding-left:15px;">ACMath</a>
 		</div>
 	</nav>
 
