Update index.html Github link

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <p>Created by Gordon Liang. View code on Github.</p>
                 <!-- <i class="material-icons">code</i> -->
                 <a 
-                    href="https://youtube.com" 
+                    href="https://github.com/glianx/acmath" 
                     target="_blank" 
                     class="btn halfway-fab waves-effect waves-light red fade"><i class="material-icons">code</i>
                 </a>
